// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Breadcrumb Harmonised Long renders correctly 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-auto-init="BreadcrumbHarmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-breadcrumb-harmonised__ellipsis"
          data-ecl-breadcrumb-harmonised-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Long renders correctly with EU content 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-auto-init="BreadcrumbHarmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-breadcrumb-harmonised__ellipsis"
          data-ecl-breadcrumb-harmonised-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Union
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          How the Union is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Long renders correctly with extra attributes 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-auto-init="BreadcrumbHarmonised"
    data-ecl-breadcrumb-harmonised="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-breadcrumb-harmonised__ellipsis"
          data-ecl-breadcrumb-harmonised-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Long renders correctly with extra class names 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised custom-class custom-class--test"
    data-ecl-auto-init="BreadcrumbHarmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-breadcrumb-harmonised__ellipsis"
          data-ecl-breadcrumb-harmonised-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Organisational structure
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Simple renders correctly 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Simple renders correctly with EU content 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Union
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Simple renders correctly with extra attributes 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-breadcrumb-harmonised="true"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised Simple renders correctly with extra class names 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised custom-class custom-class--test"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="/icons.svg#ui--corner-arrow"
          />
        </svg>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
</test>
`;

exports[`EC - Breadcrumb Harmonised with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <nav
    aria-label="You are here:"
    class="ecl-breadcrumb-harmonised"
    data-ecl-auto-init="BreadcrumbHarmonised"
    data-ecl-breadcrumb-harmonised="true"
  >
    <ol
      class="ecl-breadcrumb-harmonised__container"
    >
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Home
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__segment--ellipsis"
        data-ecl-breadcrumb-harmonised-ellipsis=""
      >
        <button
          aria-label="Click to expand"
          class="ecl-breadcrumb-harmonised__ellipsis"
          data-ecl-breadcrumb-harmonised-ellipsis-button=""
          type="button"
        >
          …
        </button>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          About the European Commission
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="expandable"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          Organisational structure
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </li>
      <li
        class="ecl-breadcrumb-harmonised__segment"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        <a
          class="ecl-link ecl-link--standalone ecl-breadcrumb-harmonised__link"
          href="/example"
        >
          How the Commission is organised
        </a>
        <!-- ecl2-compliance: link--standalone -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-green ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-s ecl-u-type-xs"
          >
            [link--standalone] - ecl compliant
          </p>
        </div>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--2xs ecl-icon--rotate-90 ecl-breadcrumb-harmonised__icon"
          focusable="false"
          role="presentation"
        >
          <use
            xlink:href="#ui--corner-arrow"
          />
        </svg>
        <!-- ecl2-compliance: icon -->
        <div
          class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
        >
          <p
            class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
          >
            [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
          </p>
        </div>
      </li>
      <li
        aria-current="page"
        class="ecl-breadcrumb-harmonised__segment ecl-breadcrumb-harmonised__current-page"
        data-ecl-breadcrumb-harmonised-item="static"
      >
        News
      </li>
    </ol>
  </nav>
  <!-- ecl2-compliance: breadcrumb--harmonised -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [breadcrumb--harmonised] -  {{ icon_file_path }} needs to be set and filled in to be able to render the separator.
    </p>
  </div>
</test>
`;
